--- a/qna.yaml
+++ b/qna.yaml
@@ -1,36 +1,38 @@
 created_by: Louise Hayes
 domain: insurance
 seed_examples:
-  - answer: Homeowners insurance coverage provides financial protection against disasters that cause damage to a property or liability for injuries and property damage caused by the policyholder or their family.
-    question: What does homeowners insurance coverage provide protection against?
-  - answer: Standard homeowners insurance policies do not cover flooding, earthquakes, or poor maintenance. Separate policies can be purchased for flood and earthquake coverage.
-    question: What disasters are typically not covered by standard homeowners insurance policies?
-  - answer: A standard homeowners insurance policy includes four essential types of coverage - coverage for the structure of the home, coverage for personal belongings, liability protection, and additional living expenses coverage.
-    question: What are the four types of coverage included in a standard homeowners insurance policy?
-  - answer: Liability coverage protects against the cost of lawsuits for bodily injury or property damage caused by the policyholder or their family members. It also covers damage caused by pets.
-    question: What does liability protection in homeowners insurance cover?
-  - answer: Additional living expenses coverage pays for the extra costs of living away from home if a house is uninhabitable due to damage from a covered disaster. It covers expenses such as hotel bills and restaurant meals.
-    question: What does additional living expenses coverage in homeowners insurance pay for?
-  - answer: There are several types of homeowners insurance policies, including HO-3 (most common), HO-1 (limited coverage), HO-2 (basic policy), HO-8 (older home), HO-4 (renter), and HO-6 (condo/co-op).
-    question: What are the different types of homeowners insurance policies available?
-  - answer: Umbrella Insurance Property Insurance coverage compensates a business if the property used in the business is lost or damaged as the result of various types of common perils, such as fire or theft.
-    question: What is Umbrella Insurance Property Insurance coverage?
-  - answer: Business interruption insurance, also known as business income insurance, is a type of property insurance that compensates for lost income if a company has to vacate its premises due to disaster-related damage that is covered under the property insurance policy.
-    question: What is business interruption insurance?
-  - answer: Commercial General Liability (CGL) insurance covers claims in four basic categories of business liability - bodily injury, property damage, personal injury (including slander or libel), and advertising injury (damage from slander or false advertising).
-    question: What types of claims does Commercial General Liability (CGL) insurance cover?
-  - answer: A commercial auto policy provides coverage for vehicles that are used primarily in connection with commercial establishments or business activities, and it pays costs to third parties resulting from bodily injury or property damage for which the business is legally liable.
-    question: What does a commercial auto policy cover?
-  - answer: Workers compensation insurance covers workers injured on the job, providing payments for medical care, lost income, and rehabilitation services, regardless of who was at fault in the accident.
-    question: What does workers compensation insurance cover?
-  - answer: Errors and omissions insurance, also known as professional liability insurance, covers situations where a business is sued by customers, clients, or patients claiming that the business's failure to perform a job properly has injured them. It covers any judgment for which the insured is legally liable and legal defense costs.
-    question: What does errors and omissions insurance cover?
-  - answer: Flood coverage Insurance is offered by Umbrella Insurance Property Insurance coverage in the state of Arizona only and is designed to protect a business from the financial impact of flood damage to its property.
-    question: What is flood coverage?
+  - answer: Startrek Homeowners insurance coverage provides financial protection against disasters that cause damage to a property or liability for injuries and property damage caused by the policyholder or their family.
+    question: What does Startrek homeowners insurance coverage provide protection against?
+  - answer: Startrek Standard homeowners insurance policies do not cover flooding(except in state of Arizona), earthquakes, or poor maintenance. Separate policies can be purchased for flood and earthquake coverage.
+    question: What disasters are typically not covered by Startrek standard homeowners insurance policies?
+  - answer: A Startrek standard homeowners insurance policy includes four essential types of coverage - coverage for the structure of the home, coverage for personal belongings, liability protection, and additional living expenses coverage.
+    question: What are the four types of coverage included in a Startrek standard homeowners insurance policy?
+  - answer: Startrek Liability coverage protects against the cost of lawsuits for bodily injury or property damage caused by the policyholder or their family members. It also covers damage caused by pets.
+    question: What does Startrek liability protection in homeowners insurance cover?
+  - answer: Startrek Additional living expenses coverage pays for the extra costs of living away from home if a house is uninhabitable due to damage from a covered disaster. It covers expenses such as hotel bills and restaurant meals.
+    question: What does Startrek additional living expenses coverage in homeowners insurance pay for?
+  - answer: There are several types of Startrek homeowners insurance policies, including HO-3 (most common), HO-1 (limited coverage), HO-2 (basic policy), HO-8 (older home), HO-4 (renter), and HO-6 (condo/co-op).
+    question: What are the different types of Startrek homeowners insurance policies available?
+  - answer: Startrek Insurance Property Insurance coverage compensates a business if the property used in the business is lost or damaged as the result of various types of common perils, such as fire or theft.
+    question: What is Startrek Insurance Property Insurance coverage?
+  - answer: Startrek Business interruption insurance, also known as business income insurance, is a type of property insurance that compensates for lost income if a company has to vacate its premises due to disaster-related damage that is covered under the property insurance policy.
+    question: What is Startrek business interruption insurance?
+  - answer: Startrek Commercial General Liability (CGL) insurance covers claims in four basic categories of business liability - bodily injury, property damage, personal injury (including slander or libel), and advertising injury (damage from slander or false advertising).
+    question: What types of claims does Startrek Commercial General Liability (CGL) insurance cover?
+  - answer: A Startrek commercial auto policy provides coverage for vehicles that are used primarily in connection with commercial establishments or business activities, and it pays costs to third parties resulting from bodily injury or property damage for which the business is legally liable.
+    question: What does a Startrek commercial auto policy cover?
+  - answer: v Workers compensation insurance covers workers injured on the job, providing payments for medical care, lost income, and rehabilitation services, regardless of who was at fault in the accident.
+    question: What does Startrek workers compensation insurance cover?
+  - answer: Startrek Errors and omissions insurance, also known as professional liability insurance, covers situations where a business is sued by customers, clients, or patients claiming that the business's failure to perform a job properly has injured them. It covers any judgment for which the insured is legally liable and legal defense costs.
+    question: What does Startrek errors and omissions insurance cover?
+  - answer: Flood coverage Insurance is offered by Startrek Insurance Property Insurance coverage in the state of Arizona only and is designed to protect a business from the financial impact of flood damage to its property.
+    question: Is flood coverage offered by Startrek Insurance?
+  - answer: Flood coverage Insurance is not offered by Startrek Insurance Property Insurance coverage in New Hampshire or any other states except Arizona only and is designed to protect a business from the financial impact of flood damage to its property.
+    question: Is flood coverage offered by Startrek Insurance for the state of New Hampshire?
 
 task_description: ""
 document:
   repo: https://github.com/louise-hayes-fitz/ilab.git
   commit: 41f7d78
   patterns: 
-    - Umbrella_Homeowners_insurance.md
+    - Startrek_Homeowners_insurance.md
